chore(assets): add new cover image
- Added 465074965_1089869412890123_3866926757510678653_n.j

--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -71,7 +71,7 @@ const {
             },
             {
                 title: 'Youtube',
-                description: 'youtube.com/@SeedChBKK',
+                description: 'youtube.com/@seedbangkok',
                 icon: 'tabler:brand-youtube',
             },
             {
