--- a/src/pages/homes/about.astro
+++ b/src/pages/homes/about.astro
@@ -22,8 +22,8 @@ const metadata = {
         }}
     >
         <Fragment slot="title">
-            Beginning<br />
-            <span class="highlight text-green dark:text-white"> คริสตจักรเมล็ดพันธุ์กรุงเทพฯ</span>
+            <span class="text-default dark:text-white">Beginning </span><br />
+            <span class="highlight text-green dark:text-green"> คริสตจักรเมล็ดพันธุ์กรุงเทพฯ</span>
         </Fragment>
 
         <Fragment slot="subtitle">
@@ -136,23 +136,19 @@ const metadata = {
         items={[
             {
                 title: 'มองเห็นศักยภาพของคนรุ่นใหม่',
-                description:
-                    'คริสตจักรเมล็ดพันธุ์กรุงเทพฯ เชื่อว่าคนรุ่นใหม่มีคุณค่าและศักยภาพที่พระเจ้าทรงมอบให้',
+                description: 'คริสตจักรเมล็ดพันธุ์กรุงเทพฯ เชื่อว่าคนรุ่นใหม่มีคุณค่าและศักยภาพที่พระเจ้าทรงมอบให้',
             },
             {
                 title: 'เชื่อว่าพระเจ้าทรงมีแผนการที่ยิ่งใหญ่สำหรับคนรุ่นใหม่',
-                description:
-                    'ทุกคนไม่ได้เกิดมาโดยบังเอิญ แต่พระเจ้าทรงมีเป้าหมายและแผนการเพื่อชีวิตของพวกเขา',
+                description: 'ทุกคนไม่ได้เกิดมาโดยบังเอิญ แต่พระเจ้าทรงมีเป้าหมายและแผนการเพื่อชีวิตของพวกเขา',
             },
             {
                 title: 'มุ่งเน้นการสร้างบรรยากาศการนมัสการที่สดใหม่',
-                description:
-                    'เพื่อให้การนมัสการสัมผัสใจและเป็นประสบการณ์ที่มีชีวิตชีวาสำหรับคนรุ่นใหม่',
+                description: 'เพื่อให้การนมัสการสัมผัสใจและเป็นประสบการณ์ที่มีชีวิตชีวาสำหรับคนรุ่นใหม่',
             },
             {
                 title: 'การเทศนาที่เข้าใจและเข้าถึงชีวิตของวัยรุ่น',
-                description:
-                    'เนื้อหาการเทศนาเน้นความเข้าใจง่าย สัมพันธ์กับชีวิตจริง และตอบโจทย์ความคิดของวัยรุ่น',
+                description: 'เนื้อหาการเทศนาเน้นความเข้าใจง่าย สัมพันธ์กับชีวิตจริง และตอบโจทย์ความคิดของวัยรุ่น',
             },
             {
                 title: 'กิจกรรมที่ช่วยให้คนรุ่นใหม่เติบโตทั้งทางจิตวิญญาณและสังคม',
@@ -162,29 +158,29 @@ const metadata = {
         ]}
     />
 
-   
     <Hero
-    tagline=""
-    image={{
-        src: '~/assets/images/cover/LINE_ALBUM_SEED BKK 2024 _3_250329_2.jpg',
-        alt: 'begining',
-    }}
->
-    <Fragment slot="title">
-        การบุกเบิกคริสตจักร<br />
-        <span class="highlight text-green dark:text-white"> </span>
-    </Fragment>
+        tagline=""
+        image={{
+            src: '~/assets/images/cover/LINE_ALBUM_SEED BKK 2024 _3_250329_2.jpg',
+            alt: 'begining',
+        }}
+    >
+        <Fragment slot="title">
+            <span class="text-default dark:text-white">การบุกเบิกคริสตจักร</span><br />
+            <span class="highlight text-green dark:text-white"> </span>
+        </Fragment>
 
-    <Fragment slot="subtitle">
-         เริ่มต้นจากการติดตามน้องๆ นักศึกษา 
-        และการเปิดกลุ่มนมัสการในมหาวิทยาลัยต่างๆ ปัจจุบันเรามีกลุ่มนมัสการใน 5 มหาวิทยาลัยทั่วกรุงเทพฯ 
-        และรังสิต ซึ่งเป็นจุดเริ่มต้นของการขยายงานของพระเจ้าในกลุ่มคนรุ่นใหม่
-       
-        <br />
-        เมล็ดพันธุ์กรุงเทพฯ คือการเริ่มต้นเล็กๆ ที่พระเจ้าทรงใช้เพื่อสร้างสิ่งยิ่งใหญ่ เราเชื่อว่าเมล็ดพันธุ์แห่งความเชื่อที่ถูกหว่านลงในใจของคนรุ่นใหม่ จะเติบโตและเกิดผลมากมายในอนาคต คริสตจักรเมล็ดพันธุ์กรุงเทพฯ จึงเป็นเหมือนดินดีที่พร้อมจะรับเมล็ดพันธุ์แห่งความเชื่อ และช่วยให้มันเติบโตอย่างแข็งแรงในทางของพระเจ้า
-    </Fragment>
-</Hero>
-<!-- 
+        <Fragment slot="subtitle">
+            เริ่มต้นจากการติดตามน้องๆ นักศึกษา และการเปิดกลุ่มนมัสการในมหาวิทยาลัยต่างๆ ปัจจุบันเรามีกลุ่มนมัสการใน 5
+            มหาวิทยาลัยทั่วกรุงเทพฯ และรังสิต ซึ่งเป็นจุดเริ่มต้นของการขยายงานของพระเจ้าในกลุ่มคนรุ่นใหม่
+
+            <br />
+            เมล็ดพันธุ์กรุงเทพฯ คือการเริ่มต้นเล็กๆ ที่พระเจ้าทรงใช้เพื่อสร้างสิ่งยิ่งใหญ่ เราเชื่อว่าเมล็ดพันธุ์แห่งความเชื่อที่ถูกหว่านลงในใจของคนรุ่นใหม่
+            จะเติบโตและเกิดผลมากมายในอนาคต คริสตจักรเมล็ดพันธุ์กรุงเทพฯ จึงเป็นเหมือนดินดีที่พร้อมจะรับเมล็ดพันธุ์แห่งความเชื่อ
+            และช่วยให้มันเติบโตอย่างแข็งแรงในทางของพระเจ้า
+        </Fragment>
+    </Hero>
+    <!-- 
     <Steps2
         title="Achievements"
         subtitle="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, quam nec venenatis lobortis, mi risus tempus nulla, sed porttitor est nibh at nulla."
@@ -216,7 +212,7 @@ const metadata = {
     /> -->
 
     <!-- Features2 Widget ************** -->
-<!-- 
+    <!-- 
     <Features2
         title="Our locations"
         tagline="Find us"
