--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ const metadata = {
     >
         <Fragment slot="title">
             <span class="text-default dark:text-white">คริสตจักร</span>
-            <span class="highlight text-green dark:text-white"> เมล็ดพันธุ์</span>
+            <span class="highlight text-green dark:text-green"> เมล็ดพันธุ์</span>
             <span class="text-default dark:text-white">กรุงเทพ</span>
         </Fragment>
 
@@ -73,7 +73,7 @@ const metadata = {
             {
                 variant: 'primary',
                 text: 'About Us',
-                href: '/about',
+                href: '/homes/about',
                 icon: 'tabler:cross',
             },
         ]}
@@ -124,7 +124,7 @@ const metadata = {
             {
                 variant: 'primary',
                 text: 'เข้าร่วมกับเรา',
-                href: '',
+                href: '/contact',
                 target: '_blank',
                 icon: 'tabler:download',
             },
