--- a/src/components/widgets/Stats.astro
+++ b/src/components/widgets/Stats.astro
@@ -30,7 +30,7 @@ const {
                             </div>
                         )}
                         {amount && (
-                            <div class="font-heading text-[2.6rem] font-bold text-primary dark:text-white lg:text-5xl xl:text-6xl">
+                            <div class="font-heading text-[2.6rem] font-bold text-primary dark:text-green lg:text-5xl xl:text-6xl">
                                 {amount}
                             </div>
                         )}
