feat(Layout): add Plausible analytics script

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,6 +40,7 @@ const { language, textDirection } = I18N
         <ClientRouter fallback="swap" />
         <link href="https://cdn.jsdelivr.net/npm/pagedone@1.2.2/src/css/pagedone.css " rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/pagedone@1.2.2/src/js/pagedone.js"></script>
+        <script defer data-domain="seedchurchbkk.org" src="https://plausible.io/js/script.js"></script>
     </head>
 
     <body class={'bg-page tracking-tight text-default antialiased'}>
