--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -28,7 +28,7 @@ body {
 }
 
 h1 {
-    color: #adff2f;
+    /* color: #adff2f; */
     /* text-transform: uppercase; */
     /* letter-spacing: 3vw; */
     line-height: 1.2;
