chore: add space.mp4 video file

--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -15,7 +15,7 @@ import '../styles/welcome.css';
 <div class="overflow-hidden">
     <div class="fixed inset-0 z-[-1] h-full w-full">
         <video class="absolute h-full w-full object-cover" autoplay muted loop playsinline id="background-video">
-            <source src="/videos/video-1@c.mp4" type="video/mp4" />
+            <source src="/videos" type="video/mp4" />
             Your browser does not support the video tag.
         </video>
     </div>
