--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -24,7 +24,7 @@ import '../styles/welcome.css';
 <!-- ข้อความตรงกลาง -->
 <div class="flex items-center justify-center h-screen w-full absolute inset-0">
     <div class="text-center p-8 bg-black bg-opacity-50 rounded-lg shadow-lg max-w-5xl mx-auto">
-            <h1 class="church-title mb-4 color-">คริสตจักรเมล็ดพันธุ์กรุงเทพ</h1>
+            <h1 class="church-title mb-4 ">คริสตจักรเมล็ดพันธุ์กรุงเทพ</h1>
         <h1 class="subtitle mb-4">The Seed Of Bangkok City Church</h1>
     </div>
 </div>
