--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const metadata = {
                 href: 'https://www.seedchurch-thailand.com/%E0%B8%AA%E0%B8%B3%E0%B9%80%E0%B8%99%E0%B8%B2%E0%B8%82%E0%B8%AD%E0%B8%87-%E0%B8%A3-%E0%B8%88-%E0%B8%81%E0%B9%82%E0%B8%9A%E0%B8%AA%E0%B8%96-1',
             },
         ]}
-        image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
+        image={{ src: '~/assets/images/รูปกางเขน(คนยืนรวมกัน)-01.png', alt: 'People' }}
     >
         <Fragment slot="title">
             <span class="text-default dark:text-white">คริสตจักร</span>
