--- a/src/components/widgets/Announcement.astro
+++ b/src/components/widgets/Announcement.astro
@@ -9,9 +9,11 @@
         class="mr-0.5 inline-block bg-white/40 px-1 py-0.5 text-xs font-semibold dark:bg-slate-700 dark:text-slate-300 rtl:ml-0.5 rtl:mr-0"
         >NEW</span
     >
-    <a href="https://astro.build/blog/astro-5/" class="font-medium text-muted hover:underline dark:text-slate-400"
-        >เว็บไซต์คริสตจักรเมล็ดพันธุ์กรุงเทพ v2 ทำด้วย Astro v5.0.0</a
-    >
+    <a
+        href="https://www.seedchurchbkk.org/camp-seed-2025/"
+        class="font-medium text-muted hover:underline dark:text-slate-400"
+        >เข้าร่วมกับเรา ค่ายเมล็ดพันธุ์ประจำปี2025
+    </a>
     <a
         target="_blank"
         rel="noopener"
