--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -26,7 +26,7 @@ import '../styles/welcome.css'
                     playsinline
                     id="background-video"
                 >
-                    <source src="/videos/video-1@c.mp4" type="video/mp4" />
+                    <source src="/videos/warm.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                 </video>
             </div>
