update core value

--- a/src/components/widgets/Announcement.astro
+++ b/src/components/widgets/Announcement.astro
@@ -7,12 +7,13 @@
 >
     <span
         class="mr-0.5 inline-block bg-white/40 px-1 py-0.5 text-xs font-semibold dark:bg-slate-700 dark:text-slate-300 rtl:ml-0.5 rtl:mr-0"
-        >NEW</span
+        >NOTE:</span
     >
     <a
-        href="https://www.seedchurchbkk.org/camp-seed-2025/"
+        href="https://www.seedchurchbkk.org/corevalue"
         class="font-medium text-muted hover:underline dark:text-slate-400"
-        >เข้าร่วมกับเรา ค่ายเมล็ดพันธุ์ประจำปี2025
+    >
+        ค่านิยมหลักข้อเชื่อของคริสตจักรองค์กรคริสตจักรเมล็ดพันธุ์ อ่านเพิ่มเติมได้ที่นี่
     </a>
     <a
         target="_blank"
