refactor: remove unused hero actions
- Removed commented out code
- Cleaned up index page component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,17 +29,17 @@ const metadata = {
 
     <Hero
         actions={[
-            {
-                variant: 'primary',
-                text: 'พระเจ้ามีจริงไหม',
-                href: 'https://www.seedchurch-thailand.com/%E0%B8%A3-%E0%B8%88-%E0%B8%81%E0%B8%9E%E0%B8%A3%E0%B8%B0%E0%B9%80%E0%B8%88-%E0%B8%B2',
-                target: '_blank',
-                icon: '',
-            },
-            {
-                text: 'ข้อมูลองค์กรคริสตจักร',
-                href: 'https://www.seedchurch-thailand.com/%E0%B8%AA%E0%B8%B3%E0%B9%80%E0%B8%99%E0%B8%B2%E0%B8%82%E0%B8%AD%E0%B8%87-%E0%B8%A3-%E0%B8%88-%E0%B8%81%E0%B9%82%E0%B8%9A%E0%B8%AA%E0%B8%96-1',
-            },
+            // {
+            //     variant: 'primary',
+            //     text: 'พระเจ้ามีจริงไหม',
+            //     href: 'https://www.seedchurch-thailand.com/%E0%B8%A3-%E0%B8%88-%E0%B8%81%E0%B8%9E%E0%B8%A3%E0%B8%B0%E0%B9%80%E0%B8%88-%E0%B8%B2',
+            //     target: '_blank',
+            //     icon: '',
+            // },
+            // {
+            //     text: 'ข้อมูลองค์กรคริสตจักร',
+            //     href: 'https://www.seedchurch-thailand.com/%E0%B8%AA%E0%B8%B3%E0%B9%80%E0%B8%99%E0%B8%B2%E0%B8%82%E0%B8%AD%E0%B8%87-%E0%B8%A3-%E0%B8%88-%E0%B8%81%E0%B9%82%E0%B8%9A%E0%B8%AA%E0%B8%96-1',
+            // },
         ]}
         image={{ src: '~/assets/images/รูปกางเขน(คนยืนรวมกัน)-01.png', alt: 'People' }}
     >
