--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -26,10 +26,7 @@ import '../styles/welcome.css'
                     playsinline
                     id="background-video"
                 >
-                    <source
-                        src="/videos/6089020_Flood America Casanare Colombia_By_Day's_Edge_Productions_Artlist_HD.mp4"
-                        type="video/mp4"
-                    />
+                    <source src="/videos/warm.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                 </video>
             </div>
